Added fix for my files

--- a/.parcelrc
+++ b/.parcelrc
@@ -4,9 +4,7 @@
   ],
   "reporters": [
     "...",
-    [
-      "parcel-reporter-copy-file-v2"
-    ],
+    "parcel-reporter-copy-file-v2",
     "parcel-reporter-clean-dist"
   ],
   "transformers": {
