--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "buffer": "^6.0.3",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
-    "parcel-reporter-copy-file-v2": "^1.0.1",
+    "parcel-reporter-static-files-copy": "^1.4.0",
     "parcel-transformer-hbs": "^1.0.4",
     "posthtml-include": "^1.7.4",
     "process": "^0.11.10"
+  },
+  "staticFiles": {
+    "staticPath": "static"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
 }
