--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "infinite-scroll": "^4.0.1",
     "lodash.debounce": "^4.0.8",
     "modern-normalize": "^1.1.0"
   },
