--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://vokoloven.github.io/hardcore-bar",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /hardcore-bar/"
+    "build": "parcel build src/*.html --public-url /Cocktails-bar/"
   },
   "repository": {
     "type": "git",
